# PhoneSim

./: .gitignore  CMakeLists.txt  MobileSensingSim.1  cscope.files  cscope.out  error_handler.h  main.cpp  milp_base.h  simlog.cpp  simlog.h  solution.h  solver_base.h  stat.h
Xcode/: Output
Xcode/DrawFigures/: drawfig.gp  drawfig_diffcost.gp  gen_trend.bash
Xcode/PhoneSim.xcodeproj/: project.pbxproj
Xcode/PhoneSim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/PhoneSim.xcodeproj/project.xcworkspace/xcshareddata/: PhoneSim.xccheckout
Xcode/PhoneSim.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/PhoneSim.xcodeproj/xcuserdata/andy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/PhoneSim.xcodeproj/xcuserdata/andy.xcuserdatad/xcschemes/: PhoneSim.xcscheme  xcschememanagement.plist
heuristic_solver/: agg_heuristic_solver.cpp  agg_heuristic_solver.h  heuristic_dyn_solver.cpp  heuristic_dyn_solver.h  heuristic_solver.cpp  heuristic_solver.h  naive_solver.cpp  naive_solver.h
optimal_solver/: cplex_adapter.cpp  cplex_adapter.h  cplex_adapter_base.cpp  cplex_adapter_base.h  cplex_balance_adapter.cpp  cplex_balance_adapter.h  cplex_milp_adapter.cpp  cplex_milp_adapter.h  graph_converter.cpp  graph_converter.h  optimal_balance_solver.cpp  optimal_balance_solver.h  optimal_solver.cpp  optimal_solver.h
scenario_generator/: area_map.h  monitor_map.h  multidim_vector.h  phone.cpp  phone.h  random_generator.cpp  random_generator.h  scenario_generator.cpp  scenario_generator.h
xcode/PhoneSim/DerivedData/PhoneSim/: info.plist
xcode/PhoneSim/DerivedData/PhoneSim/Index/Debug/macosx10.9-x86_64/PhoneSim.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal  db.xcindexdb.strings-dir  db.xcindexdb.strings-file
xcode/PhoneSim/PhoneSim/: PhoneSim.1  main.cpp
xcode/PhoneSim/PhoneSim.xcodeproj/: project.pbxproj
xcode/PhoneSim/PhoneSim.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/PhoneSim/PhoneSim.xcodeproj/xcuserdata/andy.xcuserdatad/xcschemes/: PhoneSim.xcscheme  xcschememanagement.plist
